--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "dependencies": {
+    "@escook/express-joi": "^1.1.1",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "express-jwt": "^8.4.1",
+    "joi": "^17.4.0",
+    "jsonwebtoken": "^9.0.2",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
