--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
-  "dependencies": {
-    "@escook/express-joi": "^1.1.1",
-    "ali-oss": "^6.20.0",
-    "axios": "^1.6.8",
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "express-jwt": "^8.4.1",
-    "joi": "^17.4.0",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
-    "oss-sdk": "^1.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
-  }
+    "name": "teaching-system",
+    "version": "1.0.0",
+    "main": "app.js",
+    "dependencies": {
+        "@escook/express-joi": "^1.1.1",
+        "ali-oss": "^6.20.0",
+        "axios": "^1.6.8",
+        "bcrypt": "^5.1.1",
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.18.3",
+        "express-jwt": "^8.4.1",
+        "joi": "^17.4.0",
+        "jsonwebtoken": "^9.0.2",
+        "multer": "^1.4.5-lts.1",
+        "mysql": "^2.18.1",
+        "nodemon": "^3.1.0",
+        "oss-sdk": "^1.0.0",
+        "ws": "^8.17.0"
+    },
+    "scripts": {
+        "start": "nodemon app.js"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.0"
+    }
 }
